# BRBtcHuntAMD-OpenCL

./: .gitignore  CHANGELOG.md  CMakeLists.txt  PORTING-LAYOUT.md  README.md
include/: Lang.h  SimpleSHA256.h  gpu_worker_host.h  ocl_common.h  ocl_helpers.h
kernels/: gpu_worker.cl  hash_pipeline.cl  kernel_top.cl  secp256k1_math.cl
scripts/: build-windows.ps1
src/: gpu_worker_opencl.cpp  main_opencl.cpp  ocl_utils.cpp
